# snapblaster

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
presets/: ambient.json  dnb.json  techno.json
src/: app.rs  commands.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  commands.rs  main.rs
src-tauri/src/ai/: generator.rs
src-tauri/src/link/: integration.rs
src-tauri/src/midi/: controller.rs  devices.rs  engine.rs  mod.rs
src-tauri/src/models/: cc.rs  mod.rs  project.rs  scene.rs
src-tauri/src/project/: manager.rs  storage.rs
src/ai/: generator.rs
src/link/: integration.rs
src/midi/: controller.rs  devices.rs  engine.rs  mod.rs
src/models/: cc.rs  mod.rs  project.rs  scene.rs
src/project/: manager.rs  mod.rs  storage.rs
ui/: Cargo.toml  index.html
ui/src/: app.rs  main.rs  models.rs  tauri_commands.rs
ui/src/components/: cc_editor.rs  diagnostic.rs  grid.rs  midi_monitor.rs  mod.rs  scene_editor.rs
ui/src/components/dialogs/: ai_prompt.rs  error.rs  mod.rs  project.rs  settings.rs
ui/src/styles/: dialogs.css  editor.css  grid.css  main.css
