[package]
name = "snap-blaster"
version = "0.1.0"
edition = "2021"
authors = ["Joe Frost <joseph.frost@gmail.com>"]
description = "A live performance tool for playing MIDI CC scenes"
license = "Proprietary"
repository = "https://github.com/joefrost01/snap-blaster"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
midir = "0.10.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.8"
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.40"
dirs = "6.0.0"
tempfile = "3.19.1"
rusty_link = "0.4.4"

[workspace]
members = ["ui"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
