[package]
name = "snap-blaster-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Update Leptos and related crates to use a specific version with consistent features
leptos = { version = "0.7.8", features = ["csr"] }
leptos_meta = { version = "0.7.8" } # Remove the features here
leptos_router = { version = "0.7.8" } # Update version and remove features if needed
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement", "Event", "FileReader", "DomRect", "CssStyleDeclaration", "HtmlCollection", "DataTransfer"] }
wasm-bindgen-futures = "0.4"
gloo = "0.11.0"
console_error_panic_hook = "0.1.7"


